Fixes article info on blogs page where name is too short

--- a/static/style/blogs.less
+++ b/static/style/blogs.less
@@ -78,6 +78,7 @@ article footer {
 .article-author {
     margin-top: 6px;
     margin-bottom: 2px;
+    min-width: 100%;
     font-weight: 600;
     text-decoration: none;
     word-wrap: break-word;
@@ -163,6 +164,7 @@ article footer {
         .article-author {
             margin-top: 12px;
             margin-right: 6px;
+            min-width: initial;
             float: left;
             text-align: left;
         }
